AC_INIT([Makefile.in], 1.0)

GIT_COMMIT_COUNT=`../package/version.sh --revision`
GIT_BRANCH=`git branch | grep \* | cut -d ' ' -f2`
GIT_HASH=`../package/version.sh --hash`
VERS=`../package/version.sh --release`
GIT_RELEASE=`../package/version.sh --revision`

AC_SUBST(VERS)
AC_SUBST(GIT_COMMIT_COUNT)
AC_SUBST(GIT_BRANCH)
AC_SUBST(GIT_HASH)
AC_SUBST(GIT_RELEASE)

AC_CONFIG_FILES(Makefile.dkms)
AC_CONFIG_FILES(dkms.conf)
AC_CONFIG_FILES(pfring-dkms-mkrpm.spec)
AC_CONFIG_FILES(pfring-dkms-mkdeb/debian/changelog)
AC_CONFIG_FILES(pfring-dkms-mkdeb/debian/control)

AC_OUTPUT
