AC_INIT([Makefile.in], 1.0)

GIT_COMMIT_COUNT=`../package/version.sh --revision`
GIT_BRANCH=`git branch | grep \* | cut -d ' ' -f2`
GIT_HASH=`../package/version.sh --hash`
VERS=`../package/version.sh --release`
REVISION=`../package/version.sh --revision`

KERNEL_HEADERS="linux-headers-generic"
if test -f "/usr/bin/lsb_release"; then
  OS=`/usr/bin/lsb_release -i|cut -f 2`
  if test "$OS" = "Debian"; then
    KERNEL_HEADERS="linux-headers-amd64"
  fi
fi

EXTRA_DEPENDS=""
if [ test -f /usr/bin/lsb_release ]; then
  UBUNTU_RELEASE=`lsb_release -r|cut -f 2`
  UBUNTU_SUB_RELEASE=`echo $UBUNTU_RELEASE|cut -f 1 -d '.'`

  if test "$UBUNTU_SUB_RELEASE" = "8"; then
    UBUNTU_RELEASE="debian8"
  elif test "$UBUNTU_SUB_RELEASE" = "9"; then
    UBUNTU_RELEASE="debian9"
  elif test "$UBUNTU_SUB_RELEASE" = "10"; then
    UBUNTU_RELEASE="debian10"
  elif test "$UBUNTU_SUB_RELEASE" = "11"; then
    UBUNTU_RELEASE="debian11"
  fi

  if test "$UBUNTU_RELEASE" = "20.04"  || test "$UBUNTU_RELEASE" = "22.04" || test "$UBUNTU_RELEASE" = "debian11" ; then
    EXTRA_DEPENDS=", libbpf0"
  fi
fi

AC_SUBST(VERS)
AC_SUBST(GIT_COMMIT_COUNT)
AC_SUBST(GIT_BRANCH)
AC_SUBST(GIT_HASH)
AC_SUBST(REVISION)
AC_SUBST(KERNEL_HEADERS)
AC_SUBST(EXTRA_DEPENDS)

AC_CONFIG_FILES(Makefile.dkms)
AC_CONFIG_FILES(dkms.conf)
AC_CONFIG_FILES(pfring-dkms-mkrpm.spec)
AC_CONFIG_FILES(pfring-dkms-mkdeb/debian/changelog)
AC_CONFIG_FILES(pfring-dkms-mkdeb/debian/control)

AC_OUTPUT
