AC_INIT([Makefile.in], 1.0)

IXGBE="ixgbe"
IXGBE_VERSION=`grep "IXGBE=" Makefile|cut -d '-' -f 2`
IGB="igb"
IGB_VERSION=`grep "IGB=" Makefile|cut -d '-' -f 2`
E1000E="e1000e"
E1000E_VERSION=`grep "E1000E=" Makefile|cut -d '-' -f 2`
REVISION=`git rev-list --all |wc -l`

AC_SUBST(IXGBE)
AC_SUBST(IXGBE_VERSION)
AC_SUBST(IGB)
AC_SUBST(IGB_VERSION)
AC_SUBST(E1000E)
AC_SUBST(E1000E_VERSION)
AC_SUBST(REVISION)

AC_CONFIG_FILES(Makefile.dkms.ixgbe)
AC_CONFIG_FILES(Makefile.dkms.igb)
AC_CONFIG_FILES(Makefile.dkms.e1000e)
AC_CONFIG_FILES(dkms.conf.ixgbe)
AC_CONFIG_FILES(dkms.conf.igb)
AC_CONFIG_FILES(dkms.conf.e1000e)
#AC_CONFIG_FILES(pf_ring-dkms-mkrpm.spec)

AC_OUTPUT
