AC_INIT([Makefile.in], 1.0)

E1000E="e1000e"
IGB="igb"
IXGBE="ixgbe"
IXGBEVF="ixgbevf"
I40E="i40e"
IAVF="iavf"
ICE="ice"

E1000E_VERSION=3.8.7
IGB_VERSION=5.10.2
IXGBE_VERSION=5.5.3
IXGBEVF_VERSION=4.5.1
I40E_VERSION=2.17.4
IAVF_VERSION=4.5.3
ICE_VERSION=1.9.11

PF_RING_VERSION=`../../package/version.sh --release`
REVISION=`../../package/version.sh --revision`

KERNEL_VERS_MAJ=`uname -r |cut -d. -f1`

if test "$KERNEL_VERS_MAJ" = "2"; then
  # Kernel 2.6
  HAVE_ICE=n
else
  # Kernel >=3
  HAVE_ICE=y
fi

AC_SUBST(PF_RING_VERSION)
AC_SUBST(REVISION)
AC_SUBST(HAVE_ICE)
AC_SUBST(E1000E)
AC_SUBST(E1000E_VERSION)
AC_SUBST(IGB)
AC_SUBST(IGB_VERSION)
AC_SUBST(IXGBE)
AC_SUBST(IXGBE_VERSION)
AC_SUBST(IXGBEVF)
AC_SUBST(IXGBEVF_VERSION)
AC_SUBST(I40E)
AC_SUBST(I40E_VERSION)
AC_SUBST(IAVF)
AC_SUBST(IAVF_VERSION)
AC_SUBST(ICE)
AC_SUBST(ICE_VERSION)

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(Makefile.dkms.e1000e)
AC_CONFIG_FILES(Makefile.dkms.igb)
AC_CONFIG_FILES(Makefile.dkms.ixgbe)
AC_CONFIG_FILES(Makefile.dkms.ixgbevf)
AC_CONFIG_FILES(Makefile.dkms.i40e)
AC_CONFIG_FILES(Makefile.dkms.iavf)
AC_CONFIG_FILES(Makefile.dkms.ice)
AC_CONFIG_FILES(dkms.conf.e1000e)
AC_CONFIG_FILES(dkms.conf.igb)
AC_CONFIG_FILES(dkms.conf.ixgbe)
AC_CONFIG_FILES(dkms.conf.ixgbevf)
AC_CONFIG_FILES(dkms.conf.i40e)
AC_CONFIG_FILES(dkms.conf.iavf)
AC_CONFIG_FILES(dkms.conf.ice)
AC_CONFIG_FILES(zc-dkms-mkdeb/debian/control)
AC_CONFIG_FILES(zc-dkms.mkrpm.spec)
AC_CONFIG_FILES(pfring-drivers-zc-dkms/DEBIAN/control)
AC_CONFIG_FILES(pfring-zc-rpm.spec)

AC_OUTPUT
